@@ -13,18 +13,18 @@ ifndef PERL
 endif
 
 %:
-	dh $@ --with autoreconf
+	dh $@ --parallel --with autoreconf
 
 override_dh_autoreconf:
 	dh_autoreconf --as-needed
 
 override_dh_auto_configure:
-	dh_auto_configure -- --libdir=/usr/lib --libexecdir=/usr/lib \
-	    --enable-webkdc --enable-perl --with-apxs=/usr/bin/apxs2 \
-	    --enable-reduced-depends
+	dh_auto_configure --parallel -- --libdir=/usr/lib \
+	    --libexecdir=/usr/lib --enable-webkdc --enable-perl \
+	    --with-apxs=/usr/bin/apxs2 --enable-reduced-depends
 
 override_dh_auto_build:
-	dh_auto_build
+	dh_auto_build --parallel
 	cd perl && $(PERL) Makefile.PL INSTALLDIRS=vendor
 	cd perl && $(MAKE) OPTIMIZE="$(CFLAGS)"
 
